@@ -1,5 +1,7 @@
 [Changes 1.2.2]
 
+* Replace last uses of bcopy() with memcpy(). (caf)
+
 * Fix /HISTORY *pattern* and /HISTORY -CLEAR. (caf)
 
 * Fix /SET TAB OFF. (caf)
